# uv-k5-firmware

./: CMakeLists.txt  audio.c  bitmaps.c  bitmaps.h  board.c  board.h  dp32g030.cfg  firmware.ld  font.c  font.h  init.c  main.c  malloc.c  malloc.h  misc.h  radio.c  sram-overlay.c
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yaml  release.yaml
app/: CMakeLists.txt  app.c  generic.c  main.c  menu.c  menu_new.c  menu_new.h  spectrum.c  spectrum.h  uart.c  userapp_ranking.c  userapp_ranking.h  userapps.c  userapps.h
driver/: CMakeLists.txt  bk4819-regs.h  bk4819.c  flash.c  system.c  uart.c
helper/: CMakeLists.txt  battery.c  boot.c  radio_helper.c  radio_helper.h
ui/: CMakeLists.txt  aircopy.c  battery.c  battery.h  fmradio.c  helper.c  helper.h  lock.c  main.c  menu.c  menu_new.c  menu_new.h  rssi.c  scanner.c  spectrum.c  spectrum.h  status.c  ui.c  userapp_ranking.c  userapp_ranking.h  userapps.c  userapps.h  welcome.c
